# medplexity

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: getting-started.md  index.md  key-concepts.md  requirements.txt
docs/benchmarks/: healthsearchqa.md  medicationqa.md  medmcqa.md  medqa.md  mmlu.md  mts-dialog.md  pubmedqa.md  vqa-rad.md
medplexity/: medharness.py
medplexity/benchmarks/: dataset_builder.py  dataset_factory.py  loaders.py  multiple_choice_utils.py  utils.py  vqa_utils.py
medplexity/benchmarks/healthsearchqa/: __init__.py  healthsearchqa_dataset_builder.py  models.py
medplexity/benchmarks/medicationqa/: __init__.py  medicationqa_dataset_builder.py  models.py
medplexity/benchmarks/medmcqa/: __init__.py  examples.json  medmcqa_dataset_builder.py  medmcqa_dataset_factory.py  medmcqa_loader.py  medmcqa_prompt_template.py  models.py
medplexity/benchmarks/medqa/: __init__.py  examples.json  medqa_dataset_builder.py  medqa_dataset_factory.py  medqa_prompt_template.py  models.py
medplexity/benchmarks/mmlu/: __init__.py  mmlu_dataset_builder.py  mmlu_dataset_factory.py  mmlu_examples.json  mmlu_prompt_template.py  models.py
medplexity/benchmarks/mts_dialog/: __init__.py  models.py  mts_dialog_dataset_builder.py
medplexity/chains/: chain.py  evaluation_adapter_chain.py  langchain_wrapper.py  llm_chain.py  multiple_choice_question_chain.py  summarisation_chain.py  vqa_chain.py
medplexity/datasets/: dataset.py
medplexity/evaluators/: evaluation_summary.py  evaluator.py  sequential_evaluator.py
medplexity/llms/: deepinfra.py  llm.py  openai_caller.py  utils.py
medplexity/prompts/: conversation_summarisation_prompt_template.py  medical_assistant_prompt_template.py  multiple_choice_prompt.py  prompt.py  vqa_prompt.py
medplexity/storage/: supabase_client.py
notebooks/: Getting started.ipynb  Langchain.ipynb  MMLU.ipynb  MedMCQA.ipynb  MedQA.ipynb  MultipleChoiceQA.ipynb  PubmedQA.ipynb  Summarisation.ipynb
scripts/: run.py
tests/: mock_loader.py
tests/benchmarks/: healthsearchqa.py  medicationqa.py  medmcqa.py  medqa.py  mmlu.py  mts_dialog.py  pubmedqa.py
tests/prompts/: test_medical_assistant_prompt.py  test_multiple_choice_prompt.py
(+10 files in other folders)
