[tool.poetry]
name = "medplexity"
version = "0.1.0"
description = "medplexity helps with evaluation of LLMs for medical use-cases."
authors = ["MaksymPetyak <petyak.mi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.3.0"
openai = "^0.28.0"
datasets = "^2.14.5"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
