[tool.poetry]
name = "medplexity"
version = "0.1.0"
description = "medplexity helps with evaluation of LLMs for medical use-cases."
authors = ["MaksymPetyak <petyak.mi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.3.0"
openai = "^0.28.0"
datasets = "^2.14.5"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
black = "^23.3.0"
pre-commit = "^3.2.2"
pytest = "^7.3.1"
pytest-mock = "^3.10.0"
pytest-env = "^0.8.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocstrings-python = "^1.7.0"
markdown-include = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
